Refactor away from Class.newInstance() as deprecated by Java 11